Work in progress

--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': array([[ 0.03807591,  0.05068012,  0.06169621, ..., -0.00259226,\n",
+       "          0.01990842, -0.01764613],\n",
+       "        [-0.00188202, -0.04464164, -0.05147406, ..., -0.03949338,\n",
+       "         -0.06832974, -0.09220405],\n",
+       "        [ 0.08529891,  0.05068012,  0.04445121, ..., -0.00259226,\n",
+       "          0.00286377, -0.02593034],\n",
+       "        ...,\n",
+       "        [ 0.04170844,  0.05068012, -0.01590626, ..., -0.01107952,\n",
+       "         -0.04687948,  0.01549073],\n",
+       "        [-0.04547248, -0.04464164,  0.03906215, ...,  0.02655962,\n",
+       "          0.04452837, -0.02593034],\n",
+       "        [-0.04547248, -0.04464164, -0.0730303 , ..., -0.03949338,\n",
+       "         -0.00421986,  0.00306441]]),\n",
+       " 'target': array([151.,  75., 141., 206., 135.,  97., 138.,  63., 110., 310., 101.,\n",
+       "         69., 179., 185., 118., 171., 166., 144.,  97., 168.,  68.,  49.,\n",
+       "         68., 245., 184., 202., 137.,  85., 131., 283., 129.,  59., 341.,\n",
+       "         87.,  65., 102., 265., 276., 252.,  90., 100.,  55.,  61.,  92.,\n",
+       "        259.,  53., 190., 142.,  75., 142., 155., 225.,  59., 104., 182.,\n",
+       "        128.,  52.,  37., 170., 170.,  61., 144.,  52., 128.,  71., 163.,\n",
+       "        150.,  97., 160., 178.,  48., 270., 202., 111.,  85.,  42., 170.,\n",
+       "        200., 252., 113., 143.,  51.,  52., 210.,  65., 141.,  55., 134.,\n",
+       "         42., 111.,  98., 164.,  48.,  96.,  90., 162., 150., 279.,  92.,\n",
+       "         83., 128., 102., 302., 198.,  95.,  53., 134., 144., 232.,  81.,\n",
+       "        104.,  59., 246., 297., 258., 229., 275., 281., 179., 200., 200.,\n",
+       "        173., 180.,  84., 121., 161.,  99., 109., 115., 268., 274., 158.,\n",
+       "        107.,  83., 103., 272.,  85., 280., 336., 281., 118., 317., 235.,\n",
+       "         60., 174., 259., 178., 128.,  96., 126., 288.,  88., 292.,  71.,\n",
+       "        197., 186.,  25.,  84.,  96., 195.,  53., 217., 172., 131., 214.,\n",
+       "         59.,  70., 220., 268., 152.,  47.,  74., 295., 101., 151., 127.,\n",
+       "        237., 225.,  81., 151., 107.,  64., 138., 185., 265., 101., 137.,\n",
+       "        143., 141.,  79., 292., 178.,  91., 116.,  86., 122.,  72., 129.,\n",
+       "        142.,  90., 158.,  39., 196., 222., 277.,  99., 196., 202., 155.,\n",
+       "         77., 191.,  70.,  73.,  49.,  65., 263., 248., 296., 214., 185.,\n",
+       "         78.,  93., 252., 150.,  77., 208.,  77., 108., 160.,  53., 220.,\n",
+       "        154., 259.,  90., 246., 124.,  67.,  72., 257., 262., 275., 177.,\n",
+       "         71.,  47., 187., 125.,  78.,  51., 258., 215., 303., 243.,  91.,\n",
+       "        150., 310., 153., 346.,  63.,  89.,  50.,  39., 103., 308., 116.,\n",
+       "        145.,  74.,  45., 115., 264.,  87., 202., 127., 182., 241.,  66.,\n",
+       "         94., 283.,  64., 102., 200., 265.,  94., 230., 181., 156., 233.,\n",
+       "         60., 219.,  80.,  68., 332., 248.,  84., 200.,  55.,  85.,  89.,\n",
+       "         31., 129.,  83., 275.,  65., 198., 236., 253., 124.,  44., 172.,\n",
+       "        114., 142., 109., 180., 144., 163., 147.,  97., 220., 190., 109.,\n",
+       "        191., 122., 230., 242., 248., 249., 192., 131., 237.,  78., 135.,\n",
+       "        244., 199., 270., 164.,  72.,  96., 306.,  91., 214.,  95., 216.,\n",
+       "        263., 178., 113., 200., 139., 139.,  88., 148.,  88., 243.,  71.,\n",
+       "         77., 109., 272.,  60.,  54., 221.,  90., 311., 281., 182., 321.,\n",
+       "         58., 262., 206., 233., 242., 123., 167.,  63., 197.,  71., 168.,\n",
+       "        140., 217., 121., 235., 245.,  40.,  52., 104., 132.,  88.,  69.,\n",
+       "        219.,  72., 201., 110.,  51., 277.,  63., 118.,  69., 273., 258.,\n",
+       "         43., 198., 242., 232., 175.,  93., 168., 275., 293., 281.,  72.,\n",
+       "        140., 189., 181., 209., 136., 261., 113., 131., 174., 257.,  55.,\n",
+       "         84.,  42., 146., 212., 233.,  91., 111., 152., 120.,  67., 310.,\n",
+       "         94., 183.,  66., 173.,  72.,  49.,  64.,  48., 178., 104., 132.,\n",
+       "        220.,  57.]),\n",
+       " 'DESCR': '.. _diabetes_dataset:\\n\\nDiabetes dataset\\n----------------\\n\\nTen baseline variables, age, sex, body mass index, average blood\\npressure, and six blood serum measurements were obtained for each of n =\\n442 diabetes patients, as well as the response of interest, a\\nquantitative measure of disease progression one year after baseline.\\n\\n**Data Set Characteristics:**\\n\\n  :Number of Instances: 442\\n\\n  :Number of Attributes: First 10 columns are numeric predictive values\\n\\n  :Target: Column 11 is a quantitative measure of disease progression one year after baseline\\n\\n  :Attribute Information:\\n      - Age\\n      - Sex\\n      - Body mass index\\n      - Average blood pressure\\n      - S1\\n      - S2\\n      - S3\\n      - S4\\n      - S5\\n      - S6\\n\\nNote: Each of these 10 feature variables have been mean centered and scaled by the standard deviation times `n_samples` (i.e. the sum of squares of each column totals 1).\\n\\nSource URL:\\nhttps://www4.stat.ncsu.edu/~boos/var.select/diabetes.html\\n\\nFor more information see:\\nBradley Efron, Trevor Hastie, Iain Johnstone and Robert Tibshirani (2004) \"Least Angle Regression,\" Annals of Statistics (with discussion), 407-499.\\n(https://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf)',\n",
+       " 'feature_names': ['age',\n",
+       "  'sex',\n",
+       "  'bmi',\n",
+       "  'bp',\n",
+       "  's1',\n",
+       "  's2',\n",
+       "  's3',\n",
+       "  's4',\n",
+       "  's5',\n",
+       "  's6'],\n",
+       " 'data_filename': '/Users/emachado/miniconda3/envs/ironhack/lib/python3.7/site-packages/sklearn/datasets/data/diabetes_data.csv.gz',\n",
+       " 'target_filename': '/Users/emachado/miniconda3/envs/ironhack/lib/python3.7/site-packages/sklearn/datasets/data/diabetes_target.csv.gz'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "from sklearn import datasets\n",
+    "diabetes = datasets.load_diabetes()\n",
+    "diabetes\n"
    ]
   },
   {
@@ -54,11 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['data', 'target', 'DESCR', 'feature_names', 'data_filename', 'target_filename'])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "diabetes.keys()\n"
    ]
   },
   {
@@ -74,13 +164,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".. _diabetes_dataset:\n",
+      "\n",
+      "Diabetes dataset\n",
+      "----------------\n",
+      "\n",
+      "Ten baseline variables, age, sex, body mass index, average blood\n",
+      "pressure, and six blood serum measurements were obtained for each of n =\n",
+      "442 diabetes patients, as well as the response of interest, a\n",
+      "quantitative measure of disease progression one year after baseline.\n",
+      "\n",
+      "**Data Set Characteristics:**\n",
+      "\n",
+      "  :Number of Instances: 442\n",
+      "\n",
+      "  :Number of Attributes: First 10 columns are numeric predictive values\n",
+      "\n",
+      "  :Target: Column 11 is a quantitative measure of disease progression one year after baseline\n",
+      "\n",
+      "  :Attribute Information:\n",
+      "      - Age\n",
+      "      - Sex\n",
+      "      - Body mass index\n",
+      "      - Average blood pressure\n",
+      "      - S1\n",
+      "      - S2\n",
+      "      - S3\n",
+      "      - S4\n",
+      "      - S5\n",
+      "      - S6\n",
+      "\n",
+      "Note: Each of these 10 feature variables have been mean centered and scaled by the standard deviation times `n_samples` (i.e. the sum of squares of each column totals 1).\n",
+      "\n",
+      "Source URL:\n",
+      "https://www4.stat.ncsu.edu/~boos/var.select/diabetes.html\n",
+      "\n",
+      "For more information see:\n",
+      "Bradley Efron, Trevor Hastie, Iain Johnstone and Robert Tibshirani (2004) \"Least Angle Regression,\" Annals of Statistics (with discussion), 407-499.\n",
+      "(https://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "print(diabetes['DESCR'])\n"
    ]
   },
   {
@@ -97,12 +232,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Enter your answer here:\n"
+    "There are ten attributes in the data: age, sex, body mass index, average blood pressure, and six blood serum measurements obtained from patients.\n",
+    "\n",
+    "The relation between 'data' and 'target' is \n",
+    "\n",
+    "There are 442 records from different patients.\n"
    ]
   },
   {
@@ -116,11 +253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(442, 10)\n",
+      "(442,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "print(diabetes.data.shape)\n",
+    "print(diabetes.target.shape)\n"
    ]
   },
   {
@@ -157,11 +304,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "from sklearn.linear_model import LinearRegression\n"
    ]
   },
   {
@@ -173,11 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "diabetes_model=LinearRegression()\n"
    ]
   },
   {
@@ -191,11 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "diabetes_data_train=diabetes.data[:-20]\n",
+    "diabetes_target_train=diabetes.target[:-20]\n",
+    "diabetes_data_test=diabetes.data[-20:]\n",
+    "diabetes_target_test=diabetes.target[-20:]\n"
    ]
   },
   {
@@ -207,11 +357,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "152.76430691633442\n",
+      "[ 3.03499549e-01 -2.37639315e+02  5.10530605e+02  3.27736980e+02\n",
+      " -8.14131709e+02  4.92814588e+02  1.02848452e+02  1.84606489e+02\n",
+      "  7.43519617e+02  7.60951722e+01]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "diabetes_model.fit(diabetes_data_train,diabetes_target_train)\n",
+    "print(diabetes_model.intercept_)\n",
+    "print(diabetes_model.coef_)\n"
    ]
   },
   {
@@ -232,11 +395,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-35.38153092,  64.43979328,  61.88665147, -40.46462721,\n",
+       "        44.80054784,  64.06954875, -50.87762239,   6.47935157,\n",
+       "       -65.9398948 ,  58.30503555,  45.36632793, -10.80168716,\n",
+       "        83.25046751,  56.3332925 ,   4.54458691,  16.03798088,\n",
+       "        -1.42860298,  -8.43395013,  -8.9653683 ,  -4.39664326])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "diabetes_model.predict(diabetes_data_test)-diabetes_target_test\n"
    ]
   },
   {
@@ -248,11 +426,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([233.,  91., 111., 152., 120.,  67., 310.,  94., 183.,  66., 173.,\n",
+       "        72.,  49.,  64.,  48., 178., 104., 132., 220.,  57.])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "diabetes_target_test\n"
    ]
   },
   {
@@ -263,12 +453,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your explanation here:\n"
+    "No, it isn't, it doesn't fit well because of the high dispersion in values\n"
    ]
   },
   {
@@ -303,11 +491,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.512\n",
+      "Model:                            OLS   Adj. R-squared:                  0.500\n",
+      "Method:                 Least Squares   F-statistic:                     43.16\n",
+      "Date:                Wed, 24 Jul 2019   Prob (F-statistic):           4.64e-58\n",
+      "Time:                        23:19:32   Log-Likelihood:                -2281.1\n",
+      "No. Observations:                 422   AIC:                             4584.\n",
+      "Df Residuals:                     411   BIC:                             4629.\n",
+      "Df Model:                          10                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const        152.7643      2.658     57.469      0.000     147.539     157.990\n",
+      "x1             0.3035     61.286      0.005      0.996    -120.169     120.776\n",
+      "x2          -237.6393     62.837     -3.782      0.000    -361.162    -114.117\n",
+      "x3           510.5306     68.156      7.491      0.000     376.553     644.508\n",
+      "x4           327.7370     66.876      4.901      0.000     196.275     459.199\n",
+      "x5          -814.1317    424.044     -1.920      0.056   -1647.697      19.434\n",
+      "x6           492.8146    344.227      1.432      0.153    -183.850    1169.480\n",
+      "x7           102.8485    219.463      0.469      0.640    -328.561     534.258\n",
+      "x8           184.6065    167.336      1.103      0.271    -144.334     513.547\n",
+      "x9           743.5196    175.359      4.240      0.000     398.807    1088.232\n",
+      "x10           76.0952     68.293      1.114      0.266     -58.152     210.343\n",
+      "==============================================================================\n",
+      "Omnibus:                        1.544   Durbin-Watson:                   2.026\n",
+      "Prob(Omnibus):                  0.462   Jarque-Bera (JB):                1.421\n",
+      "Skew:                           0.004   Prob(JB):                        0.491\n",
+      "Kurtosis:                       2.716   Cond. No.                         224.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "import statsmodels.api as sm\n",
+    "\n",
+    "y = diabetes_target_train\n",
+    "X = diabetes_data_train\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "model = sm.OLS(y,X)\n",
+    "\n",
+    "results=model.fit()\n",
+    "\n",
+    "print(results.summary())\n"
    ]
   },
   {
@@ -326,12 +565,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answers here:"
+    "The F-statistic of 4.64e-58 makes me reject the null hypothesis.\n",
+    "t-test x5 produce a confidence interval containing zero.\n",
+    "I would try with less variables."
    ]
   },
   {
