--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "dict_keys(['data', 'target', 'DESCR', 'feature_names', 'data_filename', 'target_filename'])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "(20, 10)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "       102.57139702, 123.56604987, 211.0346317 ,  52.60335674])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "        72.,  49.,  64.,  48., 178., 104., 132., 220.,  57.])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "         1.42860298,   8.43395013,   8.9653683 ,   4.39664326])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -490,10 +490,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   43.16</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 24 Jul 2019</td> <th>  Prob (F-statistic):</th> <td>4.64e-58</td>\n",
+       "  <th>Date:</th>             <td>Thu, 25 Jul 2019</td> <th>  Prob (F-statistic):</th> <td>4.64e-58</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>10:42:48</td>     <th>  Log-Likelihood:    </th> <td> -2281.1</td>\n",
+       "  <th>Time:</th>                 <td>11:04:53</td>     <th>  Log-Likelihood:    </th> <td> -2281.1</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   422</td>      <th>  AIC:               </th> <td>   4584.</td>\n",
@@ -569,8 +569,8 @@
        "Dep. Variable:                      y   R-squared:                       0.512\n",
        "Model:                            OLS   Adj. R-squared:                  0.500\n",
        "Method:                 Least Squares   F-statistic:                     43.16\n",
-       "Date:                Wed, 24 Jul 2019   Prob (F-statistic):           4.64e-58\n",
-       "Time:                        10:42:48   Log-Likelihood:                -2281.1\n",
+       "Date:                Thu, 25 Jul 2019   Prob (F-statistic):           4.64e-58\n",
+       "Time:                        11:04:53   Log-Likelihood:                -2281.1\n",
        "No. Observations:                 422   AIC:                             4584.\n",
        "Df Residuals:                     411   BIC:                             4629.\n",
        "Df Model:                          10                                         \n",
@@ -601,7 +601,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
        "4          70                \\t\"ford torino\"  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "5"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,16 +1009,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8092576818190329"
+       "0.8109242580064746"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,16 +1042,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.798861892967877"
+       "0.7946262540322528"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,26 +1132,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2: 0.807952039368186\n"
+      "R2: 0.8183979839515492\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([32.04505261, 15.377881  , 30.85038018, 20.81021222, 10.52791881,\n",
-       "       28.56552093, 20.14552829, 31.05901945, 29.79350219, 29.3557979 ,\n",
-       "       25.80725088, 19.98919288, 18.06340629, 21.51181263, 32.60653677,\n",
-       "       21.11829046, 35.18087575, 17.55228852, 29.24000744, 15.63929426])"
+       "array([19.62556372, 21.07202521, 14.32682694, 25.61145915, 25.6844181 ,\n",
+       "       25.6982848 , 24.50356576, 22.19623661, 15.69157658,  8.75154582,\n",
+       "       29.71761659, 30.93578631, 31.67295047, 30.84851911,  6.57069528,\n",
+       "       33.27982155, 31.49439061, 24.30979601, 26.82141345, 20.11276603])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,26 +1172,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2: 0.8163348649286097\n"
+      "R2: 0.7324121335250244\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([25.60276698, 24.5954571 ,  8.30740516, 33.34126868, 11.65062782,\n",
-       "       32.29101169, 29.55723487, 27.63793964, 16.00039458, 15.05452538,\n",
-       "       32.19284287, 31.03011748, 20.91822067, 11.61027858, 25.68515342,\n",
-       "       19.18032287, 25.17888835, 33.36730524, 16.94586245, 28.66662042])"
+       "array([15.63945529, 25.09600006, 31.03978677, 34.37843643, 32.63730853,\n",
+       "       28.849747  , 23.78929964, 32.24153185, 17.75651635, 27.9220002 ,\n",
+       "       30.12045055, 28.54864775, 20.41036495, 21.42559743, 23.40461756,\n",
+       "       22.44286705,  8.9106616 , 21.65952781, 26.53763048, 21.4874086 ])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
        "array([1, 2, 4, 3, 1, 1])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1367,14 +1367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2: 0.7346229295123125\n"
+      "R2: 0.7279435471395792\n"
      ]
     }
    ],
@@ -1384,7 +1384,7 @@
     "auto_model_reduced.fit(x_train_reduced, y_train_reduced)\n",
     "y_pred_reduced = auto_model_reduced.predict(x_train_reduced)\n",
     "print('R2:',sklearn.metrics.r2_score(y_train_reduced, y_pred_reduced))\n",
-    "# Reducing the number of features caused a significant improvement in the R squared, from 0.7944 down to 0.7347"
+    "# Reducing the number of features caused a significant reduction in the R squared, from 0.7944 down to 0.7279"
    ]
   },
   {
